fixed overflow

--- a/style.css
+++ b/style.css
@@ -53,4 +53,6 @@ input[type="submit"] {
   font-size: 100px;
   color: red;
   font-weight: bold;
+  max-width: fit-content;
+  overflow: scroll;
 }
